--- a/.github/workflows/publish_frame.yml
+++ b/.github/workflows/publish_frame.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm install
 
       - name: Publicar fotograma
-        run: node publicar frame.js
+        run: node index.js
         env:
           GOOGLE_DRIVE_FOLDER_ID: ${{ secrets.GOOGLE_DRIVE_FOLDER_ID }}
           TWITTER_API_KEY: ${{ secrets.TWITTER_API_KEY }}
